--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,11 @@
 /* Selected font families: https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600|Source+Code+Pro */
 
+* {
+    font-family: Montserrat;
+}
+
+button {
+    background-color: hsl(8deg 99% 68%);
+    border: none;
+    color: red;
+}
