--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,16 @@
 
 button {
     background-color: hsl(8deg 99% 68%);
-    border: none;
-    color: red;
+    border: solid;
+    border-width: 2px;
+    border-color: hsl(8deg 99% 68%);
+    padding: 10px 22px;
+    font-size: 16px;
+    color: hsl(0 0% 100%);
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: hsl(0 0% 100%);
+    color: hsl(8deg 99% 68%);
 }
