--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ button {
     border-width: 2px;
     border-color: hsl(8deg 99% 68%);
     padding: 10px 22px;
+    margin: 4px 0;
     font-size: 16px;
     color: hsl(0 0% 100%);
     cursor: pointer;
@@ -19,3 +20,4 @@ button:hover {
     background-color: hsl(0 0% 100%);
     color: hsl(8deg 99% 68%);
 }
+
