--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,25 @@
 /* Selected font families: https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600|Source+Code+Pro */
 
 * {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
+    color: hsl(0, 0%, 15%);
 }
 
 button {
-    background-color: hsl(8deg 99% 68%);
+    background-color: hsl(8, 99%, 68%);
     border: solid;
     border-width: 2px;
-    border-color: hsl(8deg 99% 68%);
+    border-color: hsl(8, 99%, 68%);
     padding: 10px 22px;
     margin: 4px 0;
-    font-size: 16px;
-    color: hsl(0 0% 100%);
+    font-size: inherit;
+    color: hsl(0, 0%, 100%);
     cursor: pointer;
+    border-radius: 7px;
 }
 
 button:hover {
-    background-color: hsl(0 0% 100%);
-    color: hsl(8deg 99% 68%);
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(8, 99%, 68%);
 }
 
