--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,25 @@
-/* Selected font families: https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600|Source+Code+Pro */
+/* Selected font families: https://fonts.google.com/share?selection.family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900|Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900 */
 
 * {
-    font-family: Montserrat, sans-serif;
+    font-family: Inter, sans-serif;
     color: hsl(0, 0%, 15%);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Poppins, sans-serif;
+}
+
+h2 {
+    font-weight: 700;
+}
+
+h3 {
+    font-weight: 600;
+}
+
+.image-caption {
+    font-style: italic;
+    font-weight: 300;
 }
 
 button {
@@ -13,6 +30,7 @@ button {
     padding: 10px 22px;
     margin: 4px 0;
     font-size: inherit;
+    font-weight: 500;
     color: hsl(0, 0%, 100%);
     cursor: pointer;
     border-radius: 7px;
