--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,13 @@
 
 * {
     font-family: Inter, sans-serif;
+    font-weight: 400;
     color: hsl(0, 0%, 15%);
     box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Poppins, sans-serif;
+    font-family: Inter, sans-serif;
     font-weight: 600;
 }
 
